--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,7 @@
 compiled/
 
 # Generated from .rktl:
-expander.scm
-thread.scm
-path.scm
-port.scm
-regexp.scm
-schemify.scm
+linklet/*.scm
 
 # Also generated:
 known-primitive.sls
